# binars

./: .gitignore  Cargo.toml  Readme.md  clippy.txt
.github/workflows/: ci.yml
examples/basic_function/: Cargo.toml
examples/basic_function/src/: main.rs
examples/make_and_print/src/: main.rs
examples/reusable_function/src/: main.rs
src/: lib.rs
