[package]
name = "binars"
version = "0.1.0"
authors = ["Rusty Shackleford <a@neb.best>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binars-sys = {git = "https://github.com/accusitive/binars-sys"}
lazy_static = "1.4.0"