[package]
name = "binars"
version = "0.1.0"
authors = ["Rusty Shackleford <a@neb.best>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

binars-sys = {git = "https://github.com/accusitive/binars-sys"}
lazy_static = "1.4.0"
[[example]]
name = "make_and_print"
path = "examples/make_and_print/src/main.rs"
[[example]]
name = "basic_function"
path = "examples/basic_function/src/main.rs"
[[example]]
name = "reusable_function"
path = "examples/reusable_function/src/main.rs"